# python

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
artifacts/: link-to-pypi.txt  table.tex
artifacts/3.1/: matrix*.txt  matrix+.txt  matrix@.txt
artifacts/3.2/: matrix*.txt  matrix+.txt  matrix@.txt
artifacts/3.3/: A.txt  AB.txt  C.txt  CD.txt
artifacts/results/: nl_for_tail.answer  nl_for_tail.sh  tail_for_nl_tail_wc.output  tail_for_nl_tail_wc.sh  wc_for_random.answer  wc_for_random.output  wc_for_random.sh
artifacts/tests/: random.txt
latex-generator/: latex_generator.py  test.py
latex-generator-makselivanov/: __init__.py
latex_generator_makselivanov/: latex_generator.py  test.py
src/: matrix.py  mixin.py  nl.py  tail.py  wc.py
tests/: test3.1.py  test3.2.py  test3.3.py
