[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "latex-generator-makselivanov"

dynamic = ["dependencies"]
version = "0.0.1"
authors = [
    { name="Makar Selivanov", email="makar.selivanov@gmail.com" }
]
description = "Library for generating latex code for images and tables"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/makselivanov/python/tree/02-latex"
[tool.setuptools]
packages = ["latex_generator_makselivanov"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}